--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <nav class="navbar navbar-light bg-light justify-content-between">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}">Notes</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Eshop</a>
                 <form action="{% url 'home' %}" class="d-flex my-auto" role="search">
                     {% for key in keys %}
         			    {% if key != "search" %}
